force-app/main/default/objects/Chef__c/Chef__c.object-meta.xml
<CustomObject>
    <label>Chef</label>
    <nameField>
        <label>Chef Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Chefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>