force-app/main/default/objects/Chef__c/fields/Appointed__c.field-meta.xml
<CustomField>
    <fullName>Appointed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appointed</label>
    <type>Checkbox</type>
</CustomField>