force-app/main/default/objects/Chef__c/fields/Culinary_Skills__c.field-meta.xml
<CustomField>
    <fullName>Culinary_Skills__c</fullName>
    <label>Culinary Skills</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arabic Cuisine</fullName>
            </value>
            <value>
                <fullName>Chinese Cuisine</fullName>
            </value>
            <value>
                <fullName>North Indian Cuisine</fullName>
            </value>
            <value>
                <fullName>Oriental Cuisine</fullName>
            </value>
            <value>
                <fullName>Italian Cuisine</fullName>
            </value>
            <value>
                <fullName>South Indian Cuisine</fullName>
            </value>
            <value>
                <fullName>Fast Food</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>